--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@angular/upgrade": "^5.0.0",
     "body-parser": "~1.15.2",
     "bootstrap": "^5.2.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "core-js": "^2.4.1",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "hbs": "~3.1.0",
     "mongoose": "^6.6.5",
     "mongoose-unique-validator": "^3.1.0",
